[project]
name = "cleanup"
version = "0.1.0"
description = ""
authors = [
    {name = "kuba-mazurkiewicz",email = "kmazurki@cisco.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cleanup = "cleanup.dnac_cleanup:cli"